CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

find_package(gazebo REQUIRED)

FIND_PACKAGE(Chrono COMPONENTS Vehicle CONFIG)

#message(STATUS "CHRONOVEHICLE_INCLUDES ${CHRONO_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES(SYSTEM ${CHRONO_INCLUDE_DIRS} ${GAZEBO_INCLUDE_DIRS})

link_directories(${GAZEBO_LIBRARY_DIRS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")

add_library(chrono_gazebo SHARED chrono_gazebo.cc )

TARGET_LINK_LIBRARIES(chrono_gazebo ${CHRONO_LIBRARIES} ${GAZEBO_LIBRARIES}) 

message(STATUS "CMAKE_INSTALL_LIBDIR ${CMAKE_INSTALL_LIBDIR}")
install(TARGETS chrono_gazebo
  DESTINATION lib
  COMPONENT shlib
)
