CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

find_package(gazebo REQUIRED)

FIND_PACKAGE(Chrono COMPONENTS Vehicle CONFIG)

#message(STATUS "CHRONOVEHICLE_INCLUDES ${CHRONO_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES(SYSTEM ${CHRONO_INCLUDE_DIRS} ${GAZEBO_INCLUDE_DIRS})
SET(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
INCLUDE_DIRECTORIES(${SRC_DIR})

link_directories(${GAZEBO_LIBRARY_DIRS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")

add_library(chrono_gazebo SHARED 
	${SRC_DIR}/GcVehicle.cc
	${SRC_DIR}/GcVehicleBuilder.cc
	chrono_gazebo.cc )

TARGET_LINK_LIBRARIES(chrono_gazebo ${CHRONO_LIBRARIES} ${GAZEBO_LIBRARIES}) 

message(STATUS "CMAKE_INSTALL_LIBDIR ${CMAKE_INSTALL_LIBDIR}")
install(TARGETS chrono_gazebo
  DESTINATION lib
  COMPONENT shlib
)
